# formally-verified-llm-orchestration

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
formal/: Lean4Learn.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
formal/Lean4Learn/: FPL.lean  Goals.lean  HarnessVerification.lean  TPIL.lean
formal/Lean4Learn/FPL/: Ch1_GettingToKnowLean.lean  Ch2_HelloWorld.lean  Ch3_Interlude.lean  Ch4_Monads.lean  Ch5_MonadTransformers.lean  Ch6_ProofsAsData.lean
formal/Lean4Learn/TPIL/: InductiveTypes.lean  Tactics.lean  TypeClasses.lean
paper/: paper.tex  references.bib
src/excelsior_harness/: __init__.py  _types.py  agents.py  budget.py  context.py  graph.py  orchestrator.py  state.py  tools.py
studies/mutation_testing/: AUTOMATED_RESULTS.md  CROSS_SYSTEM_RESULTS.md  RESULTS.md  SPEC_GUIDED_RESULTS.md  STUDY_DESIGN.md  analyze_mutmut.py  automated_results.json  cross_system_results.json  empirical_results.json  results.json  run_empirical_study.py  run_study.py  spec_guided_mutations.py  spec_guided_results.json
tests/: conftest.py  test_agents.py  test_budget.py  test_context.py  test_graph.py  test_integration.py  test_orchestrator.py  test_properties.py  test_state.py  test_tools.py
