[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excelsior-harness"
version = "0.1.0"
description = "Minimal agent orchestration harness — reference implementation for arXiv paper"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/excelsior_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/excelsior_harness/"
tests_dir = "tests/"
runner = ".venv/bin/python -m pytest tests/ -x -q --tb=no"
